--- a/index.html
+++ b/index.html
@@ -1,49 +1,85 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sabbir_IT22007_20-11-25</title>
-    <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@4/tex-mml-chtml.js"></script>
-
-</head>
-<body>
-    <h1>Title: Advance HTML: Design a Webpage containing some equations, marquee, audio, Youtube video as frame, pdf as frame, etc.</h1>
-    <br>
-    <br>
+    <script
+      id="MathJax-script"
+      async
+      src="https://cdn.jsdelivr.net/npm/mathjax@4/tex-mml-chtml.js"
+    ></script>
+  </head>
+  <body>
+    <h1>
+      Title: Advance HTML: Design a Webpage containing some equations, marquee,
+      audio, Youtube video as frame, pdf as frame, etc.
+    </h1>
+    <br />
+    <br />
     <div>
-        <h2>Equations</h2>
-        <h3>1. a<sup>2</sup> + b<sup>2</sup> = c<sup>2</sup></h3>
-        <h3>2. (a + b)<sup>2</sup> = a<sup>2</sup> + 2ab + b<sup>2</sup></h3>
-        <h3>3. (a + b)<sup>2</sup> = (a - b)<sup>2</sup> + 4ab</h3>
-        <h3>4. H<sub>2</sub>O = 2H<sub>2</sub> + O<sub>2</sub></h3>
+      <h2>Equations</h2>
+      <h3>1. a<sup>2</sup> + b<sup>2</sup> = c<sup>2</sup></h3>
+      <h3>2. (a + b)<sup>2</sup> = a<sup>2</sup> + 2ab + b<sup>2</sup></h3>
+      <h3>3. (a + b)<sup>2</sup> = (a - b)<sup>2</sup> + 4ab</h3>
+      <h3>4. H<sub>2</sub>O = 2H<sub>2</sub> + O<sub>2</sub></h3>
     </div>
-    <br>
+    <br />
     <div>
-        <h2>Marquee</h2>
-        <marquee behaviour="slide" direction="left" bgcolor="yellow" width="50%" height="50px">From right to left</marquee>
-        <marquee behaviour="slide" direction="right" bgcolor="lightgray" width="50%" height="50px">From left to right</marquee>
-        <marquee behaviour="slide" direction="up" bgcolor="olive" width="50%" height="50px">From bottom to up</marquee>
-        <marquee behaviour="slide" direction="down" bgcolor="skyblue" width="50%" height="50px">From up to bottom</marquee>
+      <h2>Marquee</h2>
+      <marquee
+        behaviour="slide"
+        direction="left"
+        bgcolor="yellow"
+        width="50%"
+        height="50px"
+        >From right to left</marquee
+      >
+      <marquee
+        behaviour="slide"
+        direction="right"
+        bgcolor="lightgray"
+        width="50%"
+        height="50px"
+        >From left to right</marquee
+      >
+      <marquee
+        behaviour="slide"
+        direction="up"
+        bgcolor="olive"
+        width="50%"
+        height="50px"
+        >From bottom to up</marquee
+      >
+      <marquee
+        behaviour="slide"
+        direction="down"
+        bgcolor="skyblue"
+        width="50%"
+        height="50px"
+        >From up to bottom</marquee
+      >
     </div>
-    <br>
+    <br />
     <div>
-        <h2>Audio</h2>
-        <audio controls>
-            <source src="./audio_file.mp3" type="audio/mpeg">
-        </audio>
+      <h2>Audio</h2>
+      <audio controls>
+        <source src="./audio_file.mp3" type="audio/mpeg" />
+      </audio>
     </div>
-    <br>
+    <br />
     <div>
-        <h2>Youtube Video as Frame</h2>
-        <video controls width="600" height="400" loop accelerometer clipboard-write encrypted-media gyroscope picture-in-picture web-share>
-            <source src="https://youtu.be/bf2tFixliMA" type="video/mp4">
-        </video>
+      <h2>Youtube Video as Frame</h2>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/bf2tFixliMA?si=4K44GKBk8g7itEMq" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     </div>
-    <br>
+    <br />
     <div>
-        <h2>PDF as Frame</h2>
-        <iframe src="./Science Fiction Shamagra.pdf" width="600px" height="800px"></iframe>
+      <h2>PDF as Frame</h2>
+      <iframe
+        src="./Science Fiction Shamagra.pdf"
+        width="600px"
+        height="800px"
+      ></iframe>
     </div>
-</body>
+  </body>
 </html>
