--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <h2>Equations</h2>
       <h3>1. a<sup>2</sup> + b<sup>2</sup> = c<sup>2</sup></h3>
       <h3>2. (a + b)<sup>2</sup> = a<sup>2</sup> + 2ab + b<sup>2</sup></h3>
-      <h3>3. (a + b)<sup>2</sup> = (a - b)<sup>2</sup> + 4ab</h3>
+      <h3>3. E = mc<sup>2</sup></h3>
       <h3>4. H<sub>2</sub>O = 2H<sub>2</sub> + O<sub>2</sub></h3>
     </div>
     <br />
