--- a/index.html
+++ b/index.html
@@ -4,11 +4,6 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sabbir_IT22007_20-11-25</title>
-    <script
-      id="MathJax-script"
-      async
-      src="https://cdn.jsdelivr.net/npm/mathjax@4/tex-mml-chtml.js"
-    ></script>
   </head>
   <body>
     <h1>
@@ -16,70 +11,35 @@
       audio, Youtube video as frame, pdf as frame, etc.
     </h1>
     <br />
-    <br />
-    <div>
-      <h2>Equations</h2>
-      <h3>1. a<sup>2</sup> + b<sup>2</sup> = c<sup>2</sup></h3>
-      <h3>2. (a + b)<sup>2</sup> = a<sup>2</sup> + 2ab + b<sup>2</sup></h3>
-      <h3>3. E = mc<sup>2</sup></h3>
-      <h3>4. H<sub>2</sub>O = 2H<sub>2</sub> + O<sub>2</sub></h3>
-    </div>
-    <br />
-    <div>
-      <h2>Marquee</h2>
-      <marquee
-        behaviour="slide"
-        direction="left"
-        bgcolor="yellow"
-        width="50%"
-        height="50px"
-        >From right to left</marquee
-      >
-      <marquee
-        behaviour="slide"
-        direction="right"
-        bgcolor="lightgray"
-        width="50%"
-        height="50px"
-        >From left to right</marquee
-      >
-      <marquee
-        behaviour="slide"
-        direction="up"
-        bgcolor="olive"
-        width="50%"
-        height="50px"
-        >From bottom to up</marquee
-      >
-      <marquee
-        behaviour="slide"
-        direction="down"
-        bgcolor="skyblue"
-        width="50%"
-        height="50px"
-        >From up to bottom</marquee
-      >
-    </div>
-    <br />
-    <div>
-      <h2>Audio</h2>
-      <audio controls>
-        <source src="./audio_file.mp3" type="audio/mpeg" />
-      </audio>
-    </div>
-    <br />
-    <div>
-      <h2>Youtube Video as Frame</h2>
-      <iframe width="560" height="315" src="https://www.youtube.com/embed/bf2tFixliMA?si=4K44GKBk8g7itEMq" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-    </div>
-    <br />
-    <div>
-      <h2>PDF as Frame</h2>
-      <iframe
-        src="./Science Fiction Shamagra.pdf"
-        width="600px"
-        height="800px"
-      ></iframe>
-    </div>
+    <table>
+      <tr>
+        <th>Contents</th>
+      </tr>
+      <tr>
+        <td>
+          <a href="./equation/equation.html">Equations</a>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <a href="./marquee/marquee.html">Marquee</a>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <a href="./audio/audio.html">Audio</a>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <a href="./video/video.html">Youtube Video as Frame</a>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <a href="./pdf/pdf.html">PDF as Frame</a>
+        </td>
+      </tr>
+    </table>
   </body>
 </html>
